macros/tests/trybuild/macro.stderr
error: cannot use `serde_args::generate` macro on macro
 --> tests/trybuild/macro.rs:4:1
  |
4 | macro_rules! foo {}
  | ^^^^^^^^^^^^^^^^^^^
