macros/tests/trybuild/macro.rs
use serde_args_macros::generate;

#[generate]
macro_rules! foo {}

fn main() {}
